# open-recorder

./: .eslintrc.json  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  setup.sh  tailwind.config.js
.opencode/plugins/: agent-browse.ts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  checkpoint.md  create_checker_prompt.py  create_planner_prompt.py  temp-prompt.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/06-insights-page/: 06-01-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  RESEARCH_COMPLETE.md  STACK.md  SUMMARY.md
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/editor/: page.tsx
app/insights/: InsightsCharts.tsx  InsightsDashboard.tsx  page.tsx
docs/plans/: 2026-01-26-oh-my-opencode-installation.md  2026-01-29-local-storage-design.md
plan/: plan-file.json  progress.txt  ralph.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  storage.rs
src-tauri/src/commands/: transcription.rs
src/components/: AISummary.tsx  Dashboard.tsx  Footer.tsx  Header.tsx  InsightsSidebar.tsx  KeyTopics.tsx  Player.tsx  PlayerSidebar.tsx  RecommendedActions.tsx  RecordingsList.tsx  RecordingsTable.tsx  SearchBar.tsx  SidebarFilters.tsx  StatusBadge.tsx  ToasterClient.tsx  TranscriptView.tsx  Transcription.tsx  TranscriptionModal.tsx  WaveformPlaceholder.tsx
src/lib/: types.ts
(+54 files in other folders)
